--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hdc Host</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://kit.fontawesome.com/671ad03fed.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="navbar-container">
+                <nav>
+                    <a href="#"><img class="logo" src="img/hdchostlogo.png" alt="logo"></a>
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">planos</a></li>
+                        <li><a href="#">contato</a></li>
+                        <li><a href="#" class="default-btn">login</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <main>
+                <div class="main-banner">
+                    <h1>hDC Host</h1>
+                    <p>Os melhores planos para qualquer tipo de projeto!</p>
+                </div>
+                <section class="specialties-container">
+                    <ul>
+                        <li>
+                            <i class="fas fa-shield-alt"></i>
+                            <h3>segurança</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, voluptatem repudiandae quibusdam quaerat dignissimos, veritatis quis, aut doloremque unde iusto odio laudantium sapiente iure totam quasi cupiditate assumenda eius. Ullam.</p>
+                        </li>
+                    </ul>
+                </section>
+            </main>
+        </div>
+    </header>
 </body>
 </html>
