--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
                         <li>
                             <i class="fas fa-shield-alt"></i>
                             <h3>segurança</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, voluptatem repudiandae quibusdam quaerat dignissimos, veritatis quis, aut doloremque unde iusto odio laudantium sapiente iure totam quasi cupiditate assumenda eius. Ullam.</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, voluptatem repudiandae quibusdam quaerat dignissimos.</p>
+                        </li>
+                        <li>
+                            <i class="fas fa-rocket"></i>
+                            <h3>velocidade</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, voluptatem repudiandae quibusdam quaerat dignissimos.</p>
+                        </li>
+                        <li>
+                            <i class="fas fa-comments"></i>
+                            <h3>suporte</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, voluptatem repudiandae quibusdam quaerat dignissimos.</p>
                         </li>
                     </ul>
                 </section>
