--- a/index.html
+++ b/index.html
@@ -46,6 +46,84 @@
                         </li>
                     </ul>
                 </section>
+                <section class="pricing-container">             
+                    <h1>planos e preços</h1>
+                    <p>selecione o plano perfeito para você!</p>
+                    <div class="plans-container">
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$15/mês</li>
+                                <li class="plan-name">padrão</li>
+                                <li>2GB de espaço em disco</li>
+                                <li>10 Sub-dóminios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>suporte 24/7</li>
+                                <li class="plan-btn">selecionar</li>
+                            </ul>
+                        </div>
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$15/mês</li>
+                                <li class="plan-name">padrão</li>
+                                <li>2GB de espaço em disco</li>
+                                <li>10 Sub-dóminios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>suporte 24/7</li>
+                                <li class="plan-btn">selecionar</li>
+                            </ul>
+                        </div>
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$15/mês</li>
+                                <li class="plan-name">padrão</li>
+                                <li>2GB de espaço em disco</li>
+                                <li>10 Sub-dóminios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>suporte 24/7</li>
+                                <li class="plan-btn">selecionar</li>
+                            </ul>
+                        </div>
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$15/mês</li>
+                                <li class="plan-name">padrão</li>
+                                <li>2GB de espaço em disco</li>
+                                <li>10 Sub-dóminios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>suporte 24/7</li>
+                                <li class="plan-btn">selecionar</li>
+                            </ul>
+                        </div>
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$15/mês</li>
+                                <li class="plan-name">padrão</li>
+                                <li>2GB de espaço em disco</li>
+                                <li>10 Sub-dóminios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>suporte 24/7</li>
+                                <li class="plan-btn">selecionar</li>
+                            </ul>
+                        </div>
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$15/mês</li>
+                                <li class="plan-name">padrão</li>
+                                <li>2GB de espaço em disco</li>
+                                <li>10 Sub-dóminios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>suporte 24/7</li>
+                                <li class="plan-btn">selecionar</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
     </header>
