--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                         </div>
                         <div class="plan">
                             <ul>
-                                <li class="price">R$15/mês</li>
-                                <li class="plan-name">padrão</li>
-                                <li>2GB de espaço em disco</li>
-                                <li>10 Sub-dóminios</li>
-                                <li>25 contas de email</li>
+                                <li class="price">R$30/mês</li>
+                                <li class="plan-name">dedicado</li>
+                                <li>5GB de espaço em disco</li>
+                                <li>20 Sub-dóminios</li>
+                                <li>50 contas de email</li>
                                 <li>c-panel</li>
                                 <li>suporte 24/7</li>
                                 <li class="plan-btn">selecionar</li>
@@ -76,47 +76,23 @@
                         </div>
                         <div class="plan">
                             <ul>
-                                <li class="price">R$15/mês</li>
-                                <li class="plan-name">padrão</li>
-                                <li>2GB de espaço em disco</li>
-                                <li>10 Sub-dóminios</li>
-                                <li>25 contas de email</li>
+                                <li class="price recommended">R$50/mês</li>
+                                <li class="plan-name">dedicado plus</li>
+                                <li>10GB de espaço em disco</li>
+                                <li>100 Sub-dóminios</li>
+                                <li>100 contas de email</li>
                                 <li>c-panel</li>
                                 <li>suporte 24/7</li>
-                                <li class="plan-btn">selecionar</li>
+                                <li class="plan-btn recommended">selecionar</li>
                             </ul>
                         </div>
                         <div class="plan">
                             <ul>
-                                <li class="price">R$15/mês</li>
-                                <li class="plan-name">padrão</li>
-                                <li>2GB de espaço em disco</li>
-                                <li>10 Sub-dóminios</li>
-                                <li>25 contas de email</li>
-                                <li>c-panel</li>
-                                <li>suporte 24/7</li>
-                                <li class="plan-btn">selecionar</li>
-                            </ul>
-                        </div>
-                        <div class="plan">
-                            <ul>
-                                <li class="price">R$15/mês</li>
-                                <li class="plan-name">padrão</li>
-                                <li>2GB de espaço em disco</li>
-                                <li>10 Sub-dóminios</li>
-                                <li>25 contas de email</li>
-                                <li>c-panel</li>
-                                <li>suporte 24/7</li>
-                                <li class="plan-btn">selecionar</li>
-                            </ul>
-                        </div>
-                        <div class="plan">
-                            <ul>
-                                <li class="price">R$15/mês</li>
-                                <li class="plan-name">padrão</li>
-                                <li>2GB de espaço em disco</li>
-                                <li>10 Sub-dóminios</li>
-                                <li>25 contas de email</li>
+                                <li class="price">R$100/mês</li>
+                                <li class="plan-name">cloud</li>
+                                <li>20GB de espaço em disco</li>
+                                <li>200 Sub-dóminios</li>
+                                <li>200 contas de email</li>
                                 <li>c-panel</li>
                                 <li>suporte 24/7</li>
                                 <li class="plan-btn">selecionar</li>
