--- a/index.html
+++ b/index.html
@@ -100,7 +100,30 @@
                         </div>
                     </div>
                 </section>
+                <section>
+                    <section class="searchdomain-container">
+                        <h2>buscar um domínio</h2>
+                        <p>veja se o domínio que você deseja está disponivel</p>
+                        <form>
+                            <input type="text" name="domain" placeholder="Digite seu domínio desejado">
+                            <input type="submit" value="Buscar Domínio">
+                        </form>
+                    </section>
+                    <section class="contact-container">
+                        <h2>entre em contato</h2>
+                        <p>mande uma mensagem para nós conversarmos sobre a melhor hospedagem para seu negócio.</p>
+                        <form>
+                            <input type="text" name="name" placeholder="Seu nome">
+                            <input type="email" name="email" placeholder="Seu e-mail">
+                            <textarea name="message" placeholder="Digite sua mensagem"></textarea>
+                            <input type="submite" value="Enviar">
+                        </form>
+                    </section>
+                </section>
             </main>
+            <footer>
+
+            </footer>
         </div>
     </header>
 </body>
