--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="navbar-container">
                 <nav>
                     <a href="#"><img class="logo" src="img/hdchostlogo.png" alt="logo"></a>
-                    <ul>
+                    <ul class="navbar-items">
                         <li><a href="#">home</a></li>
                         <li><a href="#">planos</a></li>
                         <li><a href="#">contato</a></li>
