--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <input type="text" name="name" placeholder="Seu nome">
                             <input type="email" name="email" placeholder="Seu e-mail">
                             <textarea name="message" placeholder="Digite sua mensagem"></textarea>
-                            <input type="submite" value="Enviar">
+                            <input type="submit" value="Enviar">
                         </form>
                     </section>
                 </section>
